// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Design System/TopNavBar playground 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="css-1dzk9h8-TopNavBar"
      role="banner"
    >
      <div
        className="css-hqy842-TopNavBar"
      >
        <div
          className="css-7hsty4-SidebarMenuIcon"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-n3de71-Icon"
            />
          </span>
        </div>
        <div
          className="css-1pvuzw2-LogoWrapper"
        >
          <div
            className="css-1plr80g-PlaceHolder"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="css-kz8rna-TopNavBar"
      />
      <div
        className="css-v74rfr-TopNavBar"
      >
        <div
          role="button"
        >
          <div
            className="css-6mpaj4-Menu"
            data-testid="userMenu"
          >
            <button
              className="css-1idp8wm-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <div
                    className="css-v4tpzl-Avatar"
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="css-1qy2jjj-Button"
                >
                  <span>
                    <span
                      className="css-dczdc6-UserMenu"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1k5aruc-Icon"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Additional Tools 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="css-1dzk9h8-TopNavBar"
      role="banner"
    >
      <div
        className="css-hqy842-TopNavBar"
      >
        <div
          className="css-7hsty4-SidebarMenuIcon"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-n3de71-Icon"
            />
          </span>
        </div>
        <div
          className="css-1pvuzw2-LogoWrapper"
        >
          <div
            className="css-1plr80g-PlaceHolder"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="css-kz8rna-TopNavBar"
      >
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-hpo279-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-wizu6"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-hpo279-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-wizu6"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
        <div
          className="css-o66dxn-TextInputWrapper"
        >
          <div
            className="css-hpo279-TextInputWrapper"
          >
            <div
              className="css-1kf684z-TextInputWrapper"
            >
              <div
                className="css-1u4znjd"
              >
                <input
                  className="css-wizu6"
                  disabled={false}
                  required={false}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        className="css-v74rfr-TopNavBar"
      >
        <div
          role="button"
        >
          <div
            className="css-6mpaj4-Menu"
            data-testid="userMenu"
          >
            <button
              className="css-1idp8wm-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <div
                    className="css-v4tpzl-Avatar"
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="css-1qy2jjj-Button"
                >
                  <span>
                    <span
                      className="css-dczdc6-UserMenu"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1k5aruc-Icon"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Dark theme enabled 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="css-zv5vvk-TopNavBar"
      role="banner"
    >
      <div
        className="css-hqy842-TopNavBar"
      >
        <div
          className="css-7hsty4-SidebarMenuIcon"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-n3de71-Icon"
            />
          </span>
        </div>
        <div
          className="css-1pvuzw2-LogoWrapper"
        >
          <div
            className="css-1plr80g-PlaceHolder"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="css-kz8rna-TopNavBar"
      />
      <div
        className="css-v74rfr-TopNavBar"
      >
        <div
          role="button"
        >
          <div
            className="css-6mpaj4-Menu"
            data-testid="userMenu"
          >
            <button
              className="css-rfi42e-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <div
                    className="css-v4tpzl-Avatar"
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="css-1qy2jjj-Button"
                >
                  <span>
                    <span
                      className="css-dczdc6-UserMenu"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-14m0jd5-Icon"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Design System/TopNavBar with Logo Placeholder 1`] = `
<div
  style={
    Object {
      "margin": 5,
    }
  }
>
  <div
    style={
      Object {
        "display": "flex",
        "justifyContent": "flex-end",
      }
    }
  >
    <button
      css={
        Object {
          "backgroundColor": "transparent",
          "borderRadius": 4,
          "color": "#000",
          "outline": "none",
        }
      }
      onClick={[Function]}
    >
      turn 
      dark
       on
    </button>
  </div>
  <div
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <div
      aria-label="Top Application Banner"
      className="css-1dzk9h8-TopNavBar"
      role="banner"
    >
      <div
        className="css-hqy842-TopNavBar"
      >
        <div
          className="css-7hsty4-SidebarMenuIcon"
          data-testid="menu-handler"
          onClick={[Function]}
        >
          <span
            className="css-1gnbc76-Icon"
            onClick={[Function]}
          >
            <span
              className="css-n3de71-Icon"
            />
          </span>
        </div>
        <div
          className="css-1pvuzw2-LogoWrapper"
        >
          <div
            className="css-1plr80g-PlaceHolder"
          >
            <strong>
              LOGO
            </strong>
            PLACEHOLDER
          </div>
        </div>
      </div>
      <div
        className="css-kz8rna-TopNavBar"
      />
      <div
        className="css-v74rfr-TopNavBar"
      >
        <div
          role="button"
        >
          <div
            className="css-6mpaj4-Menu"
            data-testid="userMenu"
          >
            <button
              className="css-1idp8wm-Button"
              data-testid="button"
              disabled={false}
              onClick={[Function]}
            >
              <span
                className="css-1xr6sam-Button"
              >
                <span
                  className="css-1kner5m-Button"
                >
                  <div
                    className="css-v4tpzl-Avatar"
                  >
                    <img
                      src="https://material-ui.com/static/images/avatar/1.jpg"
                    />
                  </div>
                </span>
                <span
                  className="css-1qy2jjj-Button"
                >
                  <span>
                    <span
                      className="css-dczdc6-UserMenu"
                    >
                      Tom Cruise
                    </span>
                  </span>
                </span>
                <span
                  className="css-1kner5m-Button"
                >
                  <span
                    className="css-1gnbc76-Icon"
                    onClick={[Function]}
                  >
                    <span
                      className="css-1k5aruc-Icon"
                    />
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
